# solana-subgraphs

./: .env.example  .gitignore  Cargo.toml  package.json
.cargo/: config.toml
apps/airdrops/: Cargo.toml  substreams.yaml
apps/airdrops/idls/: merkle_instant_v10.json
apps/airdrops/proto/: program.proto
apps/airdrops/src/: lib.rs
apps/airdrops/src/idl/: mod.rs
apps/airdrops/subgraph/: buf.gen.yaml  package.json  schema.graphql  tsconfig.json
apps/airdrops/subgraph/src/: adapters.ts  mappings.ts
apps/airdrops/subgraph/src/constants/: index.ts
apps/airdrops/subgraph/src/handlers/: index.ts
apps/airdrops/subgraph/src/helpers/: action.ts  activity.ts  asset.ts  campaign.ts  factory.ts  watcher.ts
apps/lockup/: Cargo.toml  buf.gen.yaml  substreams.yaml
apps/lockup/idls/: lockup_linear_v10.json
apps/lockup/proto/: program.proto
apps/lockup/src/: lib.rs
apps/lockup/src/idl/: mod.rs
apps/lockup/subgraph/: package.json  schema.graphql
apps/lockup/subgraph/src/: adapters.ts  mappings.ts
apps/lockup/subgraph/src/constants/: index.ts
apps/lockup/subgraph/src/handlers/: index.ts
apps/lockup/subgraph/src/helpers/: action.ts  asset.ts  contract.ts  ownership.ts  stream.ts  watcher.ts
