[workspace]
resolver = "2"
members = ["apps/lockup", "apps/airdrops", "packages/substream"]

[workspace.dependencies]
hex-literal = "0.3.4"
num-bigint = "0.4"
num-traits = "0.2.15"
prost = "0.13"
prost-types = "0.13"
substreams = "0.6"
substreams-solana = "0.14"
substreams-solana-program-instructions = "0.2"
anchor-lang = ">=0.30.1"
sologger_log_context = "0.1.2"
base64 = "0.22.1"
borsh = { version = "0.10.3" }
sablier_packages_substream = { path = "packages/substream" }
anyhow = "1"
regex = "1.8"

[workspace.target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[workspace.build-dependencies]
anyhow = "1"
regex = "1.8"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
